--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,13 @@
 <nav>
     {% for item in site.data.navigation %}
-      <a href="{{ item.link }}" {% if page.url == item.link %}class="current"{% endif %}>{{ item.name }}</a>
+      <a href="{{ item.link | relative_url }}" {% if page.url == item.link %}class="current"{% endif %}>{{ item.name }}</a>
     {% endfor %}
-  </nav>
+</nav>
+
+<br>
+
+<nav>
+  {% for item in site.data.navigation %}
+    <a href="{{ item.link | prepend: site.baseurl }}" {% if page.url == item.link %}class="current"{% endif %}>{{ item.name }}</a>
+  {% endfor %}
+</nav>
